# slackminebot

./: Cargo.toml
src/: logtail.rs  main.rs
