[package]
name = "slackminebot"
version = "0.1.0"
authors = [
    "Fenhl <fenhl@fenhl.net>",
    "farthen <me@farthen.de>"
]

[[bin]]
name = "slackminebot"
path = "src/main.rs"
doc = false
test = false
bench = false

[dependencies]
hyper = "0.7" # required for the slack::api functions
serde = "*"
serde_json = "*"
slack = "*"
